terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/snippet_allowlist/allow_valid_modsec_snippet/case.yaml
kind: AdmissionReview
apiVersion: admission.k8s.io/v1beta1
request:  # Fully-qualified group/version/kind of the incoming object
  kind:
    group: networking.k8s.io
    version: v1
    kind: Ingress

  operation: "CREATE"
  # Name of the resource being modified
  name: ing-0

  # Namespace of the resource being modified, if the resource is namespaced (or is a Namespace object)
  namespace: default-0

  object:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: ing-0
      namespace: ns-0
      annotations:
        kubernetes.io/ingress.class: "modsec-01"
        nginx.ingress.kubernetes.io/modsecurity-snippet: "correct"
        cloud-platform.justice.gov.uk/ignore-external-dns-weight: "true"
    spec:
      rules:
        - host: ing-0.example.com
          http:
            paths:
            - backend:
                service:
                  name: helloworld
                  port:
                    name: http
              pathType: ImplementationSpecific
