terraform/deployments/cluster-services/modules/gatekeeper/test/suite/ingress_external_dns_weight.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
tests:
- name: external_dns_weight
  template: ../../resources/constraint_templates/ingress_external_dns_weight.yaml
  constraint: ../../resources/constraints/ingress_external_dns_weight.yaml
  cases:
  - name: allow-ignore-true
    object: samples/external_dns_weight/allow_ignore_true/case.yaml
    assertions:
    - violations: no
  - name: allow-weight
    object: samples/external_dns_weight/allow_weight/case.yaml
    assertions:
    - violations: no
  - name: deny-ignore-false
    object: samples/external_dns_weight/deny_ignore_false/case.yaml
    assertions:
    - violations: yes
  - name: deny-no-annotations
    object: samples/external_dns_weight/deny_no_annotations/case.yaml
    assertions:
    - violations: yes
  - name: deny-no-weight
    object: samples/external_dns_weight/deny_no_weight/case.yaml
    assertions:
    - violations: yes
  - name: deny-empty-weight
    object: samples/external_dns_weight/deny_empty_weight/case.yaml
    assertions:
    - violations: yes
