terraform/deployments/cluster-services/modules/gatekeeper/test/suite/warn_service_account_secret_delete.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
tests:
- name: warn_service_account_secret_delete
  template: ../../resources/constraint_templates/warn_service_account_secret_delete.yaml
  constraint: ../../resources/constraints/warn_service_account_secret_delete.yaml
  cases:
  - name: allow-other-secret-delete
    object: samples/warn_service_account_secret_delete/allow_other_secret_delete/case.yaml
    assertions:
    - violations: no
  - name: allow-service-account-secret-create
    object: samples/warn_service_account_secret_delete/allow_service_account_secret_create/case.yaml
    assertions:
    - violations: no
  - name: allow-service-account-secret-update
    object: samples/warn_service_account_secret_delete/allow_service_account_secret_update/case.yaml
    assertions:
    - violations: no
  - name: warn-service-account-secret-delete
    object: samples/warn_service_account_secret_delete/warn_service_account_secret_delete/case.yaml
    assertions:
    - violations: yes
